[tool.poetry]
name = "howard"
version = "0.1.0"
description = "Server with Flask for IoT and home automation"
authors = ["Thiago Sant' Helena <thiago.sant.helena@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
flask = "^1.1.1"
gunicorn = "^20.0.4"
pymongo = "^3.10.1"
speedtest-cli = "^2.1.2"
flask_crontab = "^0.1.2"
flask_restx = "^0.2.0"
loguru = "^0.4.1"
dnspython = "^1.16.0"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
